kustomize/bpmdb/bpmdb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bpmdb
  namespace: bpmdb
  labels:
    app: bpmdb
spec:
  selector:
    matchLabels:
      app: bpmdb
  replicas: 1
  template:
    metadata:
      labels:
        app: bpmdb
    spec:
      containers:
        - name: bpmdb
          image: harbor.zencluster.org/wilinger/bpmdatabase:0.1.6
          imagePullPolicy: Always
          args:
            - ./docker-entrypoint.sh
      imagePullSecrets:
        - name: regcred
