kustomize/bpmdb/bpmdb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bpmdb-service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: bpmdb
