kustomize/bpmdb/pg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: bpmdb
  labels:
    app: postgres
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
