kustomize/bpmdb/bpmdb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bpmdb-ingress
  labels:
    app.kubernetes.io/instance: 'bpmdb'
    app.kubernetes.io/name: 'bpmdb'
spec:
  tls:
  - hosts:
    - bpmdb.zencluster.org
  rules:
  - host: bpmdb.zencluster.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bpmdb-service
            port:
              number: 80
  ingressClassName: nginx
